EMP-5 Update dto and localservice packages (#6)
